--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cookivel-frontend",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "babelMacros": {
     "twin": {
       "preset": "emotion"
@@ -25,11 +25,13 @@
     "pretendard": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
