[FEAT] Add viewer layout

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
+    "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
@@ -26,7 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
