--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
