--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.14",
     "@next/font": "13.1.1",
     "axios": "^1.2.2",
     "eslint": "8.30.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
