--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.1",
     "swiper": "^8.4.5",
