Update package.json and index.js

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-macros": "^3.1.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "twin.macro": "^3.1.0"
+    "twin.macro": "^3.1.0",
+    "@faker-js/faker": "^8.1.0"
   }
 }
