--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@emotion/css": "^11.10.5",
@@ -20,31 +22,47 @@
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.14",
     "@next/font": "13.1.1",
+    "@yaireo/tagify": "^4.17.8",
     "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "pretendard": "^1.3.6",
+    "rc-pagination": "^3.3.1",
     "react": "18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
+    "react-glider": "^4.0.2",
+    "react-hook-form": "^7.43.9",
+    "react-horizontal-scrolling-menu": "^4.0.4",
     "react-icons": "^4.7.1",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
+    "react-table": "^7.8.0",
+    "react-tag-input": "^6.8.1",
+    "react-tagsinput": "^3.20.1",
+    "react-textarea-autosize": "^8.4.1",
     "react-toastify": "^9.1.1",
-    "swiper": "^8.4.5",
+    "sass": "^1.62.1",
+    "swiper": "^9.3.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.5",
-    "@faker-js/faker": "^7.6.0",
+    "@faker-js/faker": "^8.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.0",
     "babel-plugin-macros": "^3.1.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "twin.macro": "^3.1.0"
